--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <% if notice %>
+      <p class='alert alert-success'><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class='alert alert-danger'><%= alert %></p>
+    <% end %>
+    <% if current_user %>
+    <%= link_to 'Log Out', destroy_user_session_path, 'data-turbo-method': :delete %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
