--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
@@ -18,8 +19,8 @@
       <p class='alert alert-danger'><%= alert %></p>
     <% end %>
     <% if current_user %>
-    <%= link_to 'Log Out', destroy_user_session_path, 'data-turbo-method': :delete %>
+      <%= link_to 'Log Out', destroy_user_session_path, 'data-turbo-method': :delete %>
     <% end %>
-    <%= yield %>
+    <main><%= yield %></main>
   </body>
 </html>
