--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+.devise-form .text-input {
+    @apply 
+      appearance-none relative block w-full px-3 py-2 border
+    border-gray-300 placeholder-gray-500 text-gray-900
+      focus:outline-none focus:ring-indigo-500 focus:border-indigo-500
+      focus:z-10 sm:text-sm
+    ;
 }
-
-*/
