--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
       </h2>
       <%- if devise_mapping.registerable? && controller_name != 'sessions' %>
         <p class="mt-2 text-center text-sm text-gray-600">
-          Or <%= link_to "sign in", new_session_path(resource_name), class: "font-medium text-indigo-600 hover:text-indigo-500" %>
+          Or <%= link_to "sign in", new_session_path(resource_name), class: "text-link" %>
         </p>
       <% end %>
     </div>
