--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,33 @@
-<h2>Forgot your password?</h2>
+<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <img
+        class="mx-auto h-12 w-auto"
+        src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg"
+        alt="Workflow"
+        />
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+        Forgot your password?
+      </h2>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { class: 'devise-form', method: :post }) do |f| %>
+      <div class="mt-8 space-y-3">
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+        <div class="rounded-md shadow-sm">
+          <div>
+            <%= f.label :email, class: "sr-only", for: "email-address" %>
+            <%= f.email_field :email, id: "email-address", autocomplete: "email", placeholder: "Email address", class: "text-input rounded-t-md rounded-b-md" %>
+          </div>
+        </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+        <div class="actions">
+          <%= f.submit "Send me reset password instructions", class: "button-container submit-button"%>
+        </div>
+      </div>  
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>  
+</div>
