--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,6 @@
 <div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
-    <div>
-      <img
-        class="mx-auto h-12 w-auto"
-        src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg"
-        alt="Workflow"
-        />
-      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-        Forgot your password?
-      </h2>
-    </div>
+    <%= render "devise/shared/form_header", title: "Forgot your password?" %>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { class: 'devise-form', method: :post }) do |f| %>
       <div class="mt-8 space-y-3">
