Overwrite the TailwindCSS gem behavior to make the ability for multiple input endpoints

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.devise-form .text-input {
+  @apply 
+    appearance-none relative block w-full
+    px-3 py-2 sm:text-sm
+    border border-gray-300 placeholder-gray-500 text-gray-900
+  ;
+}
