--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind-devise", "inter-font", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "devise-tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "devise", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
