--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
         Hi, <%= current_user.first_name %>
       </p>
       <%= button_to 'Log Out', destroy_user_session_path, method: :delete, data: { turbo: 'false' }, class: 'font-medium text-indigo-600 hover:text-indigo-500' %>
+      <%= link_to 'APP', dashboard_path, class: 'font-medium text-red-600 hover:text-red-500' %>
     <% else %>
       <%= link_to 'Sign In', new_user_session_path, class: 'font-medium text-indigo-600 hover:text-indigo-500' %>
     <% end %>
