--- a/app/assets/stylesheets/dashboard/header.css
+++ b/app/assets/stylesheets/dashboard/header.css
@@ -1,5 +1,3 @@
-/* HAMBURGER MENU */
-
 .hamburger {
   cursor: pointer;
   width: 24px;
@@ -45,4 +43,8 @@
 
 .open .hamburger-bottom {
   transform: rotate(-45deg) translateY(6px) translateX(-6px);
+}
+
+.nav-list .active {
+  color: red;
 }
