--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div id='root'></div>
+    <div id='dashboard-app'></div>
     <div id='modal'></div>
   </body>
 </html>
